@@ -10,3 +10,4 @@ Direct3D 9
 Direct3D 11
 	* Added missing UnorderedAccessViewBufferFlags flag.
 	* Removed invalid range checks from FFT AttachBuffersAndPrecompute
+	* Added overloads to EffectVectorVariable.Set for int and bool vectors.
